# nvcfund-web1

./: Dockerfile  NVCT_Exchange_Capabilities_Discussion_Summary.md  SVC-FUND-KY.pem  account_generator.py  account_holder_models.py  ach_service.py  add_account_holder_direct.py  add_afd1_assets.py  add_banco_isabel.py  add_blockchain_tx_hash.py  add_central_banks.py  add_eur_gbp_rate.py  add_global_banks_simple.py  add_global_correspondent_banks.py  add_government_agencies.py  add_one_asset.py  add_one_institution.py  add_treasury_loan_name.py  add_tx_hash_column.py  alternate_paypal_test.py  analyze_database_performance.py  api_bridge.py  api_test.py  app copy.py  app.py  app_server.py  auth.py  background_deploy.py  benchmark_performance.py  bic_registry.db  blockchain.py  blockchain_status_redirect.py  blockchain_utils.py  bridge_xyz_accelerated_implementation.md  bridge_xyz_api_integration.py  bridge_xyz_business_analysis.md  bridge_xyz_integration_analysis.md  bridge_xyz_service_alignment.md  bridge_xyz_technical_integration.md  cache_utils.py  (+223 more)
attached_assets/: NVC BANK SELF LIQUIDATING Loan Closing Statement 100 M 2.htm  NVC BANK SELF LIQUIDATING Loan Closing Statement 100 M.xlsx  NVC PB ACCOUNTS HOLDERS.csv
config/: edi_partners.json
contracts/: MultiSigWallet.sol  NVCToken.sol  SettlementContract.sol
docs/: API_Getting_Started.md  NVC_Banking_Platform_Technical_Integration_Guide.md  README.md  blockchain_vs_swift.md  developer_email_template.md  edi_guide.md  generate_nvc_tokenomics_pdf.py  generate_pdf.py  generate_swift_bic_guide_pdf.py  index.html  (+9 more)
(+554 files in other folders)
